feat(member): 회원 상태에 따른 예외 처리 (#23)
* feat(member): 회원 상태에 따른 예외 처리 (#19)

* style(member): 오타 수정

* fix(security): cors 설정 변경